src/objects/TestSF1__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TestSF1s</relationshipLabel>
        <relationshipName>TestSF1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deletion_Date__c</fullName>
        <label>Deletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>TestSF1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestSF1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestSF1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>